--- a/express-locallibrary-tutorial/views/genre_list.pug
+++ b/express-locallibrary-tutorial/views/genre_list.pug
@@ -1,13 +1,13 @@
-
 extends layout
 
 block content
   h1= title
-
+  
   ul
-    each genre in genre_list
-      li
-        a(href=genre.url) #{genre.name}
-        
-    else
-      li There is no genre
+  each val in list_genres
+    li 
+      a(href=val.url) #{val.name}
+
+  else
+    li There are no genre.
+
